[gd_scene load_steps=27 format=3 uid="uid://cm7e5ir8ykhpv"]

[ext_resource type="Script" path="res://sources/minigames/caterpillar/caterpillar_head.gd" id="1_775bq"]
[ext_resource type="Texture2D" uid="uid://cm2logtgvc2xj" path="res://assets/minigames/caterpillar/graphics/caterpillar_head_eat_0000.png" id="2_bms4j"]
[ext_resource type="Texture2D" uid="uid://cktwccok14wg" path="res://assets/minigames/caterpillar/graphics/caterpillar_head_eat_0001.png" id="3_b7ria"]
[ext_resource type="Texture2D" uid="uid://dc1daykhulypa" path="res://assets/minigames/caterpillar/graphics/caterpillar_head_eat_0002.png" id="4_o1mx3"]
[ext_resource type="Texture2D" uid="uid://bih660a72lgox" path="res://assets/minigames/caterpillar/graphics/caterpillar_head_eat_0003.png" id="5_4bxl4"]
[ext_resource type="Texture2D" uid="uid://dh5j4wnixs535" path="res://assets/minigames/caterpillar/graphics/caterpillar_head_eat_0004.png" id="6_phfqk"]
[ext_resource type="Texture2D" uid="uid://b4it1ogu1u0xk" path="res://assets/minigames/caterpillar/graphics/caterpillar_head_eat_0005.png" id="7_g2swl"]
[ext_resource type="Texture2D" uid="uid://c3nbblslby5bu" path="res://assets/minigames/caterpillar/graphics/caterpillar_head_idle_1_0000.png" id="8_oceii"]
[ext_resource type="Texture2D" uid="uid://dilxohj0cpgcq" path="res://assets/minigames/caterpillar/graphics/caterpillar_head_idle_1_0001.png" id="9_shkbq"]
[ext_resource type="Texture2D" uid="uid://p88pp7ugc74q" path="res://assets/minigames/caterpillar/graphics/caterpillar_head_idle_1_0002.png" id="10_qqxdf"]
[ext_resource type="Texture2D" uid="uid://cieeg7571ksa" path="res://assets/minigames/caterpillar/graphics/caterpillar_head_idle_1_0003.png" id="11_e6riq"]
[ext_resource type="Texture2D" uid="uid://3w4byuhu5x4o" path="res://assets/minigames/caterpillar/graphics/caterpillar_head_idle_1_0004.png" id="12_0dkir"]
[ext_resource type="Texture2D" uid="uid://be3gtyrvh7ktx" path="res://assets/minigames/caterpillar/graphics/caterpillar_head_idle_1_0005.png" id="13_tueu4"]
[ext_resource type="Texture2D" uid="uid://bguj7bmtcx8nw" path="res://assets/minigames/caterpillar/graphics/caterpillar_head_idle_2_0000.png" id="14_31lhl"]
[ext_resource type="Texture2D" uid="uid://cwd8jj6n5osb5" path="res://assets/minigames/caterpillar/graphics/caterpillar_head_idle_2_0001.png" id="15_eojms"]
[ext_resource type="Texture2D" uid="uid://d4be4pw7dlc1m" path="res://assets/minigames/caterpillar/graphics/caterpillar_head_idle_2_0002.png" id="16_nafi5"]
[ext_resource type="Texture2D" uid="uid://d02mcpcxt8642" path="res://assets/minigames/caterpillar/graphics/caterpillar_head_idle_2_0003.png" id="17_2uw8y"]
[ext_resource type="Texture2D" uid="uid://7ck7wl3paakd" path="res://assets/minigames/caterpillar/graphics/caterpillar_head_idle_2_0004.png" id="18_ur1fa"]
[ext_resource type="Texture2D" uid="uid://bqksaxymxf3jb" path="res://assets/minigames/caterpillar/graphics/caterpillar_head_idle_2_0005.png" id="19_yfbnl"]
[ext_resource type="Texture2D" uid="uid://b2gq7rp00465p" path="res://assets/minigames/caterpillar/graphics/caterpillar_head_spit_0000.png" id="20_m706h"]
[ext_resource type="Texture2D" uid="uid://7dmi0ppf7l14" path="res://assets/minigames/caterpillar/graphics/caterpillar_head_spit_0001.png" id="21_8bqpq"]
[ext_resource type="Texture2D" uid="uid://fuy8gpq16rx0" path="res://assets/minigames/caterpillar/graphics/caterpillar_head_spit_0002.png" id="22_0xvrf"]
[ext_resource type="Texture2D" uid="uid://e7slqekktoy2" path="res://assets/minigames/caterpillar/graphics/caterpillar_head_spit_0003.png" id="23_62scc"]
[ext_resource type="Texture2D" uid="uid://bcb58png710nc" path="res://assets/minigames/caterpillar/graphics/caterpillar_head_spit_0004.png" id="24_njvfl"]
[ext_resource type="Texture2D" uid="uid://fshkh73oisnk" path="res://assets/minigames/caterpillar/graphics/caterpillar_head_spit_0005.png" id="25_g5ryg"]

[sub_resource type="SpriteFrames" id="SpriteFrames_x8rro"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bms4j")
}, {
"duration": 1.0,
"texture": ExtResource("3_b7ria")
}, {
"duration": 1.0,
"texture": ExtResource("4_o1mx3")
}, {
"duration": 1.0,
"texture": ExtResource("5_4bxl4")
}, {
"duration": 1.0,
"texture": ExtResource("6_phfqk")
}, {
"duration": 1.0,
"texture": ExtResource("7_g2swl")
}],
"loop": false,
"name": &"eat",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_oceii")
}, {
"duration": 1.0,
"texture": ExtResource("9_shkbq")
}, {
"duration": 1.0,
"texture": ExtResource("10_qqxdf")
}, {
"duration": 1.0,
"texture": ExtResource("11_e6riq")
}, {
"duration": 1.0,
"texture": ExtResource("12_0dkir")
}, {
"duration": 1.0,
"texture": ExtResource("13_tueu4")
}],
"loop": false,
"name": &"idle1",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_31lhl")
}, {
"duration": 1.0,
"texture": ExtResource("15_eojms")
}, {
"duration": 1.0,
"texture": ExtResource("16_nafi5")
}, {
"duration": 1.0,
"texture": ExtResource("17_2uw8y")
}, {
"duration": 1.0,
"texture": ExtResource("18_ur1fa")
}, {
"duration": 1.0,
"texture": ExtResource("19_yfbnl")
}],
"loop": false,
"name": &"idle2",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_m706h")
}, {
"duration": 1.0,
"texture": ExtResource("21_8bqpq")
}, {
"duration": 1.0,
"texture": ExtResource("22_0xvrf")
}, {
"duration": 1.0,
"texture": ExtResource("23_62scc")
}, {
"duration": 1.0,
"texture": ExtResource("24_njvfl")
}, {
"duration": 1.0,
"texture": ExtResource("25_g5ryg")
}],
"loop": false,
"name": &"spit",
"speed": 12.0
}]

[node name="CaterpillarHead" type="Node2D"]
script = ExtResource("1_775bq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(104, -96)
sprite_frames = SubResource("SpriteFrames_x8rro")
animation = &"idle1"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animation_finished"]
